spellcheck and UK english

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -31,7 +31,7 @@
 
 \doublespacing 
 
-\title{\large Estimating interaction strengths for diverse horizontal systems using performance data}
+\title{\large Estimating interaction strengths for diverse horizontal systems using performance data.}
 
 
 
@@ -76,7 +76,7 @@ M.D.B. designed the methodology, carried out analyses and led the drafting of th
 
 \section*{Data accessibility}
 
-Data will be submitted to Dryad upon publication. Code is available in the Github repository \url{https://github.com/malbion/JointModelFramework}.
+Data will be submitted to Dryad upon publication. Code is available in the GitHub repository \url{https://github.com/malbion/JointModelFramework}.
 
 \newpage
 
@@ -109,10 +109,10 @@ Data will be submitted to Dryad upon publication. Code is available in the Githu
     \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) \parencite{Vellend2016} have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to directly observe empirically and must instead be deduced through other means. A common approach in population ecology is to directly quantify the effects of interactions on a species of interest by evaluating performance in the absence and presence of potential interaction partners at fixed or varying densities \parencite{Connell1961, Grace1990}. `Performance' here refers to any variable that affects the dynamics of the system, for example quantity of resources gathered, biomass accumulation, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through their connection to population dynamics models, and thus helps draw direct conclusions about the effects of interactions on emergent diversity patterns \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases as $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
     \paragraph{}
-    \textbf{Various methods have been developed to circumvent these issues. A common strategy is to reduce the number of parameters to be estimated by assuming most interactions are weak enough to be negligible, and thus priority is given to inferrence of only the strongest interactions \parencite{Weiss-Lehman2022}. Other approaches include averaging interactions across species by aggregating species together in groups, for example based on their origin and life form \parencite{Martyn2021}, by their taxonomy and traits \parencite{Uriarte2004}, or lumping all heterospecific species together \parencite{Chu2015}. Here we present a alternative approach designed to make the most of available data without requiring such strong a priori hypotheses. Specifically, we develop a joint model that allows us to estimate both identifiable and unidentifiable pairwise interactions from measures of performance in the absence and presence of different interaction partners.}
+    \textbf{Various methods have been developed to circumvent these issues. A common strategy is to reduce the number of parameters to be estimated by assuming most interactions are weak enough to be negligible, and thus priority is given to inference of only the strongest interactions \parencite{Weiss-Lehman2022}. Other approaches include averaging interactions across species by aggregating species together in groups, for example based on their origin and life form \parencite{Martyn2021}, by their taxonomy and traits \parencite{Uriarte2004}, or lumping all heterospecific species together \parencite{Chu2015}. Here we present a alternative approach designed to make the most of available data without requiring such strong a priori hypotheses. Specifically, we develop a joint model that allows us to estimate both identifiable and unidentifiable pairwise interactions from measures of performance in the absence and presence of different interaction partners.}
 
     \paragraph{} 
-    We present a general framework to estimate interactions in diverse horizontal systems. We implement the model in STAN \parencite{Carpenter2017}, a Bayesian statistical language, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate a range of uses for this approach through ecologically-relevant findings. \textbf{We further describe how to couch the returned interaction estimates into established models of population dynamics, thus allowing inferences to be drawn between the structure and nature of the interaction matrix and patterns of community abundances and biodiversity. This framework presents a new and exciting way to make use of data that would otherwise be too incomplete to uniquely infer all pairwise interactions. We also provide  pre-written model code in R and STAN which requires little to no modification for immediate application to a wide variety of datasets of species performance.}
+    We present a general framework to estimate interactions in diverse horizontal systems. We implement the model in STAN \parencite{Carpenter2017}, a Bayesian statistical language, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate a range of uses for this approach through ecologically-relevant findings. \textbf{We further describe how to couch the returned interaction estimates into established models of population dynamics, thus allowing inferences to be drawn between the structure and nature of the interaction matrix and patterns of community abundances and biodiversity. This framework presents a new and exciting way to make use of data that would otherwise be too incomplete to uniquely infer all pairwise interactions. We also provide model code in R and STAN which requires little to no modification for immediate application to a wide variety of datasets of species performance.}
 
 
 \section{Methods}
@@ -152,7 +152,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \label{meth:id_params}
 
     \paragraph{}
-    A common issue in observational datasets is that some species or elements are not observed interacting with other species or interacting at sufficiently variable densities because data sampling is limited. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{i,j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated with measurements of focal $i$ must be linearly independent of all other vectors of densities of species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density or equally proportional densities at every measurement, neither $\beta_{i, a}$ nor $\beta_{i, b}$ is inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. Given an empirical dataset, we construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not. We describe our verification of linear independence between vectors of neighbour densities and the construction of the $Q$ matrix in the S. Methods Section \ref{SI:identify} and in the Github repository.
+    A common issue in observational datasets is that some species or elements are not observed interacting with other species or interacting at sufficiently variable densities because data sampling is limited. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{i,j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated with measurements of focal $i$ must be linearly independent of all other vectors of densities of species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density or equally proportional densities at every measurement, neither $\beta_{i, a}$ nor $\beta_{i, b}$ is inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. Given an empirical dataset, we construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not. We describe our verification of linear independence between vectors of neighbour densities and the construction of the $Q$ matrix in the S. Methods Section \ref{SI:identify} and in the GitHub repository.
     
     \subsection{Unidentifiable parameters and the response--impact model}
     \label{meth:rim}
@@ -164,9 +164,9 @@ We developed a joint modelling framework to estimate pairwise interactions which
         f(p_{k}) = \gamma_{d_k} - r_{d_k} \sum_{j=1}^{t} e_{j} X_{d_k, j}
         \label{rim}
         \end{equation}
-    To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is frequently possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognizing that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} \, e_{j}$.
+    To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is frequently possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognising that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} \, e_{j}$.
 
-    \textbf{Readers should note that the response--impact model makes different assumptions about the structure of interactions in nature. Specifically it supposes that species tend to have a generalisable effect on and response to neighbours regardless of neighbour identity. This stands in contrast to the NDDM, which assumes a unique parameter for every interaction thereby allowing for more idiosyncracies across species. Such simplification is useful from a statistical point of view in order to infer unidentifiable interactions, but its ecological significance should not be dismissed. Though there is evidence in support of this approach \parencite{Stouffer2022, Skwara2022}, care should always be taken to assess the different assumptions behind the estimation of identifiable and unidentifiable interactions and how well these may apply to any particular system of interest.}
+    \textbf{Readers should note that the response--impact model makes different assumptions about the structure of interactions in nature. Specifically it supposes that species tend to have a generalisable effect on and response to neighbours regardless of neighbour identity. This stands in contrast to the NDDM, which assumes a unique parameter for every interaction thereby allowing for more idiosyncrasies across species. Such simplification is useful from a statistical point of view in order to infer unidentifiable interactions, but its ecological significance should not be dismissed. Though there is evidence in support of this approach \parencite{Stouffer2022, Skwara2022}, care should always be taken to assess the different assumptions behind the estimation of identifiable and unidentifiable interactions and how well these may apply to any particular system of interest.}
 
     \subsection{Joining the two models}
     \label{meth:addlog}
@@ -177,7 +177,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
         B = Q \circ \tilde B + (1 - Q) \circ r e^T
         \label{matB}
         \end{equation}
-    where $Q$ is the matrix of identifiable interactions, and $\tilde B$ is an $s \times t$ matrix that only has free parameters inferred in the locations where $Q_{i, j} =1$. The symbol $\circ$ represents the elementwise (Hadamard) product, whereby each element $i, j$ of the first matrix is multiplied by the $i, j$ element of the second matrix, resulting in a matrix of the same dimension as the operands. In other words, the final interaction matrix $B$ takes a free parameter from the NDDM when that parameter is identifiable, and the corresponding RIM estimate, $r_i e_j$ when that parameter is not.
+    where $Q$ is the matrix of identifiable interactions, and $\tilde B$ is an $s \times t$ matrix that only has free parameters inferred in the locations where $Q_{i, j} =1$. The symbol $\circ$ represents the element-wise (Hadamard) product, whereby each element $i, j$ of the first matrix is multiplied by the $i, j$ element of the second matrix, resulting in a matrix of the same dimension as the operands. In other words, the final interaction matrix $B$ takes a free parameter from the NDDM when that parameter is identifiable, and the corresponding RIM estimate, $r_i e_j$ when that parameter is not.
 
     \paragraph{}
     An important novel feature of our framework is that we can fit all parameters simultaneously by requiring that both the NDDM and RIM contribute to an overall joint model log likelihood:
@@ -197,7 +197,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     where both sums are across all $n$ observations, ${\rm Pr}$ is the probability density for the model (e.g.\ negative binomial), $p$ is the vector of measured performances, $\gamma, r, e,$ and $B$ are parameters as defined in Eqs.~\ref{nddm} and \ref{rim}, and $\dots$ includes any other parameters (e.g.\ dispersion if using a negative binomial distribution for the data). Note that $p_k$ and $\gamma$ are common to both the RIM and NDDM.
 
     \paragraph{}
-    For a hypothetical dataset with which all interactions are identifiable, then $B = \tilde B$ and fitting the RIM is not strictly necessary. The parameter vectors $r$ and $e$ would still be estimated, but they are independent of the parameters in $\tilde B$ and hence maximization of both likelihoods is independent. Conversely, if no interactions are identifiable then the joint model devolves to the RIM only. In the middle ground---where the majority of datasets are likely to lie---the joint model framework allows us to estimate free interaction parameters when possible, and use $r_i e_j$ estimates when not. An important distinction to make is that the NDDM estimates identifiable interactions only, whereas the RIM estimates all interactions, pairwise identifiable and pairwise unidentifiable. However, by maximising Eq. \ref{loglikjoint} we allow both models to provide good fits to the data but also for $r$ and $e$ to ``adjust'' around inferred values of $\tilde B$. 
+    For a hypothetical dataset with which all interactions are identifiable, then $B = \tilde B$ and fitting the RIM is not strictly necessary. The parameter vectors $r$ and $e$ would still be estimated, but they are independent of the parameters in $\tilde B$ and hence maximisation of both likelihoods is independent. Conversely, if no interactions are identifiable then the joint model devolves to the RIM only. In the middle ground---where the majority of datasets are likely to lie---the joint model framework allows us to estimate free interaction parameters when possible, and use $r_i e_j$ estimates when not. An important distinction to make is that the NDDM estimates identifiable interactions only, whereas the RIM estimates all interactions, pairwise identifiable and pairwise unidentifiable. However, by maximising Eq. \ref{loglikjoint} we allow both models to provide good fits to the data but also for $r$ and $e$ to ``adjust'' around inferred values of $\tilde B$. 
 
 
     \subsection{Making interaction parameters comparable across focal species} 
@@ -226,7 +226,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Model fitting}
 
         \paragraph{}        
-        We implement the NDDM (Eq.~\ref{nddm}), the RIM (Eq.~\ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code as well as R scripts and functions to run and fit the model on a simulated dataset in our Github repository \url{https://github.com/malbion/JointModelFramework}.
+        We implement the NDDM (Eq.~\ref{nddm}), the RIM (Eq.~\ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code as well as R scripts and functions to run and fit the model on a simulated dataset in our GitHub repository \url{https://github.com/malbion/JointModelFramework}.
         From the model file, only \textit{the family function}, the link function for $p_k$ and its parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production, but a different distribution may be more appropriate when using other measures of performance.   
 
         \paragraph{}
@@ -239,9 +239,9 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Dealing with sparse networks}
     \label{meth:sparse}
 
-    \textbf{In horizontal systems, interaction networks are expected to be non-sparse because species typically interact via a small set of shared, limiting resources. Nonetheless, it is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. An overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution reflect a lack of confidence to its effect. Lastly, the interaction may be well-informed but weak, in which case the posterior is centered around zero.}
+    \textbf{In horizontal systems, interaction networks are expected to be non-sparse because species typically interact via a small set of shared, limiting resources. Nonetheless, it is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. An overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution reflect a lack of confidence to its effect. Lastly, the interaction may be well-informed but weak, in which case the posterior is centred around zero.}
 
-    \textbf{If, contrary to our assumptions, a user of our framework has good cause to believe that many interactions are weak and the network is instead sparse, there are multiple approaches for dealing with this issue. For example, setting strongly informed priors centered around zero for specific interactions that are thought to be negligible would be relatively easy to implement in the code we provide. More general alternative methods which have been developed explicitly for sparse interaction networks already exist, albeit where sparsity is applied across all interactions \parencite{Weiss-Lehman2022}.} Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have non-overlapping growing seasons and thus never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
+    \textbf{If, contrary to our assumptions, a user of our framework has good cause to believe that many interactions are weak and the network is instead sparse, there are multiple approaches for dealing with this issue. For example, setting strongly informed priors centred around zero for specific interactions that are thought to be negligible would be relatively easy to implement in the code we provide. More general alternative methods which have been developed explicitly for sparse interaction networks already exist, albeit where sparsity is applied across all interactions \parencite{Weiss-Lehman2022}.} Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have non-overlapping growing seasons and thus never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
 
     \subsection{Case study}
 
@@ -275,7 +275,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     Keystone species have disproportionately strong effects on other species in their system and the dynamics of the whole ecosystem, based on their abundances \parencite{Power1996, Piraino2002, Libralato2006}. As such their exclusion from a community is expected to create significant changes in species density and composition \parencite{Paine1969}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g.\ \cite{Paine1992}) \textbf{and the inclusion of multiple trophic levels}, we can identify potential candidates by comparing a species' impact on the population growth of other species to its own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from its response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights a native species in green, \textit{Gilberta tenuifolia} (GITE), which may be a potential keystone species due to having strongly competitive effects on the rest of the community overall, despite low density. 
 
     \subsubsection*{Q3. Do all exotic species compete with native species?}
-    Though invasive species are expected to compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to the native species in a community. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of its facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). Both species have weak or close-to-median effects on their neighbours compared to other focal species. %\textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, its overall competitive effect being largely driven by weak facilitation. 
+    Though invasive species are expected to compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of exotic species facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to the native species in a community. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of its facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). Both species have weak or close-to-median effects on their neighbours compared to other focal species. %\textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, its overall competitive effect being largely driven by weak facilitation. 
     \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. \textbf{These effects are partly driven by its incredibly high germination rate (over twice as high as any other focal species).}  These results suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
 
 
@@ -286,7 +286,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     Our novel framework quantifies the effects of interacting species and reciprocal performance, allowing the estimation of diverse, horizontal interaction matrices. The resulting matrices are non-symmetrical and can contain both positive and negative interactions, as well as the effect of a species on itself. This framework is flexible to metrics of performance, type of group (e.g.\ species, population, etc.) and diversity. We also propose a way to approximate unidentifiable interactions given information about those which are identifiable, \textbf{which is a significant feature given that networks for horizontal systems are expected to be non-sparse}. The interaction matrices generated through this framework can be transformed into interaction networks through the use of models describing the system's interaction dynamics. \textbf{Together, these features differentiate our framework from other methods currently available for estimating interactions in diverse horizontal systems and} make it particularly useful in an ecological context (as illustrated in our case study) as well as flexible for use with data from the wide range of complex systems dominated by horizontal interactions.
 
     \paragraph{}
-    \textbf{In particular, our approach includes a method to infer all pairwise interactions despite `incomplete' data. There are, generally speaking, two alternative strategies to deal with this issue, both of which attempt to reduce the number of interactions to be estimated. The first assumes that many species have similar effects on one another and can be grouped a priori according to biological factors (e.g. traits, life form) \parencite{Uriarte2004, Martyn2020}. The second assumes that a majority of interactions are weak and hence can be removed from the model through variable selection procedures \parencite{Mutshinda2009, Weiss-Lehman2022}, resulting in a sparse interaction network. \textcite{Weiss-Lehman2022} defined interactions as a combination of an average community-level measure and species-specific deviations from this average, and they used regularization approaches to allow only a subset of these deviations to take non-zero values. In our case study, many interaction estimates overlapped with zero, though as discussed in the Methods \ref{meth:sparse} this does not necessarily imply sparsity.}
+    \textbf{In particular, our approach includes a method to infer all pairwise interactions despite `incomplete' data. There are, generally speaking, two alternative strategies to deal with this issue, both of which attempt to reduce the number of interactions to be estimated. The first assumes that many species have similar effects on one another and can be grouped a priori according to biological factors (e.g. traits, life form) \parencite{Uriarte2004, Martyn2020}. The second assumes that a majority of interactions are weak and hence can be removed from the model through variable selection procedures \parencite{Mutshinda2009, Weiss-Lehman2022}, resulting in a sparse interaction network. \textcite{Weiss-Lehman2022} defined interactions as a combination of an average community-level measure and species-specific deviations from this average, and they used regularisation approaches to allow only a subset of these deviations to take non-zero values. In our case study, many interaction estimates overlapped with zero, though as discussed in the Methods \ref{meth:sparse} this does not necessarily imply sparsity.}
 
     \paragraph{}
     \textbf{\textcite{Ovaskainen2017} present a similar approach to ours but for time-series data. Their method assumes that interspecific interactions can be described by a small number of community-level drivers (effectively linear combinations of species abundances) which best predict future growth rates. Though this method requires all intraspecific interactions to be directly inferrable, the number of community-level drivers is much smaller than the number of species, allowing interspecific interactions between many species to be quantified despite relatively short time-series data. They compared their framework to both sparse and full interaction models, the latter performing poorly due to overfitting. Indeed, whether our framework provides a better fit to data remains to be tested, and will depend strongly on the particulars of both the data and system at hand. Nonetheless, rather than treat sparse and full interaction models as an either-or question, our joint method provides an `intermediate' way to make use of data that has historically been insufficient or too incomplete to infer all pairwise interactions. We thus expect it will open up a wide range of questions that were previously difficult or impossible to answer.} Though we illustrate our study with one particular ecological dataset, the method presented here could be adapted for use on a wider variety of horizontal systems such as those found in microbial, neural, and social networks. 
