--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -103,9 +103,7 @@ Data will be submitted to Dryad upon publication. Code is available in the GitHu
     \paragraph{}
     In many biological systems, interactions between system elements (be these species, individuals, etc.) affect population-level performance and together determine the dynamics of the whole system. To understand system dynamics when multiple system elements are involved, complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. \textbf{Network theory has been widely applied to investigate different biological systems. It has been particularly effective at informing us of the underlying biological processes structuring diverse multi-trophic communities \parencite{Dunne2002, Thompson2012} through the study of vertical interactions in food webs, plant-pollinator and host-parasite systems \parencite{Lafferty2008, Stouffer2014, Cirtwill2015a}.}
 
-    % DBS: I might be being dense, but I don't see where Ellison 2019 says anything about "horizontal networks".
-    % MDB: "These non-trophic interactions usually are neglected in ecological networks unless they are lumped within compartments representing other primary producers or basal resources" - should I remove?
-    \paragraph{} % Cite Vellend ecological monograph
+    \paragraph{} 
     \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) \parencite{Vellend2016} have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to directly observe empirically and must instead be deduced through other means. A common approach in population ecology is to directly quantify the effects of interactions on a species of interest by evaluating performance in the absence and presence of potential interaction partners at fixed or varying densities \parencite{Connell1961, Grace1990}. `Performance' here refers to any variable that affects the dynamics of the system, for example quantity of resources gathered, biomass accumulation, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through their connection to population dynamics models, and thus helps draw direct conclusions about the effects of interactions on emergent diversity patterns \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases as $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
     \paragraph{}
@@ -227,11 +225,24 @@ We developed a joint modelling framework to estimate pairwise interactions which
 
         \paragraph{}        
         We implement the NDDM (Eq.~\ref{nddm}), the RIM (Eq.~\ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code as well as R scripts and functions to run and fit the model on a simulated dataset in our GitHub repository \url{https://github.com/malbion/JointModelFramework}.
-        From the model file, only \textit{the family function}, the link function for $p_k$ and its parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production, but a different distribution may be more appropriate when using other measures of performance.   
+        From the model file, only \textbf{the family function}, the link function for $p_k$ and its parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production, but a different distribution may be more appropriate when using other measures of performance.   
+
+        % Dealing with convergence:
+		% X we show that multiple chains converge well on simulated data, for all variants of the model 
+		% - we explain that for our case study, convergence becomes difficult due to the correlation between the r and e parameters - which will depend on the data at hand.
+		% - we show that despite not-ideal rhat values, the posteriors of the RIM and Joint model gamma parameters still match closely to those of the NDDM, and the monte carlo standard error is still lower than the posterior standard deviation, so even though the chains don't converge they are still very close to one another, and often overlapping.
+		% - maybe we compare the parameter values between the multichain models and the single-chain models? I haven't done that yet though to not sure what it will show.
+
 
         \paragraph{}
-        Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots. \textbf{This being said, we also completed a model validation using multiple chains (S. Methods \ref{SI:multichains}). Outcomes from this validation did not result in different conclusions.}
-        % DBS: I do not believe the text above is clear enough about what the supps include. At a minimum somewhere we need to specify here or there the same thing that the reviewer said; namely, that convergence of lambdas and alphas can still be assessed across multiple chains.
+        \textbf{We first evaluated convergence of the NDD model only, the RI model only, and the joint NDD-RI model using simulated data created with the \texttt{simul\_data()} function available in this project's associated GitHub repository, running the models with 4 chains and 3000 iterations, of which the first 2000 were discarded. We varied the total number of species and the proportion of unidentifiable interactions in our simlated datasets (the latter were assigned $0$ values in the NDDM). We observed good convergence of the $\gamma$ and $B$ parameters in all models as evaluated by the $\hat{R}$ statistic ($\hat{R} < 1.01$) and visual inspection of traceplots. As expected for the RI only model and the joint model, our latent variables $r$ and $e$ often showed sign-switching. This means that different MCMC chains return coefficient values which are of the same magnitude, but opposing signs. Whilst this affects the $\hat{R}$ statistic of these $r$ and $e$ parameters, it does not affect the convergence of the resulting interaction parameters, hence why we excluded $r$ and $e$ from our evaluation of convergence. Convergence was slightly more difficult to achieve with certain simulated datasets but this was solved by increasing the \texttt{adapt\_delta}  argument, hinting at potentially problematic geometry of the posteriors.}
+
+        \paragraph{}
+        \textbf{We then ran all models on the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. All parameters for the NDDM converged well, however some of the $\gamma$ and $B$ parameters for the RIM and joint model received $\hat{R}$ values over $1.01$. High $\hat{R}$ values without other warnings are commonly associated with posteriors that are highly correlated and whose geometry is hence difficult to traverse \parencite{Team2022} [this reference is for \url{https://mc-stan.org/misc/warnings.html#r-hat}). We explain why this can be the case for the $r$ and $e$ parameters and how this affects the $\hat{R}$ of $\gamma$ and $B$ in the Supplementary Methods \ref{SI:convergence}, though the degree of correlation is dependent on the data at hand as evidenced by convergence of all models on the simulated data. Nevertheless we remained comfortable using the joint model estimates returned by multiple chains, Supplementary Methods \ref{SI:convergence} goes into further detail as to why and shows how the posterior intervals of these parameters remain informative despite high $\hat{R}$ values.}
+
+
+
+        %Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots. \textbf{This being said, we also completed a model validation using multiple chains (S. Methods \ref{SI:multichains}). Outcomes from this validation did not result in different conclusions.}
 
         \paragraph{}
         STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, from which samples are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty, we therefore recommend sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. See \textcite{Ellison2004} for a comprehensive review of parameter estimations.
@@ -261,7 +272,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM. When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}). This is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. \textit{Interaction estimates between focal species were scaled according to the annual plant population model (Supplementary Methods \ref{SI:casestudy}) into interaction strengths affecting population growth,} and we sampled from each resulting interaction strength distributions to create 1000 samples of the scaled community interaction matrix.
 
     \paragraph{}
-    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 55.2\% of focal $\times$ focal interactions were competitive, making competition the dominant interaction type. The median of 44.8\% of focal $\times$ focal interactions, however, were facilitative. As a result, the median of 48.1\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. Median intraspecific interaction strength was competitive for $15$ focal species (68.2\%), and facilitative for the remaining $7$ (31.8\%). For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with $0$, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{When considering interactions with neighbouring focal species, the proportion which did not overlap with $0$ dropped to 32.3\%.}
+    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 55.2\% of focal $\times$ focal interactions were competitive, making competition the dominant interaction type. The median of 44.8\% of focal $\times$ focal interactions, however, were facilitative. As a result, the median of 48.1\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. \textbf{Median intraspecific interaction strength was competitive for $15$ focal species (68.2\%), and facilitative for the remaining $7$ (31.8\%)}. For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with $0$, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{When considering interspecific interactions with neighbouring focal species, the proportion which did not overlap with $0$ dropped to 32.3\%.}
 
     \subsection{Examples of ecological applications}
 
@@ -365,7 +376,7 @@ The authors declare no competing interests.
         \caption{For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of values as calculated from 1000 sampled networks. Note that only focal $x$ focal interactions are included. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species referred to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
         In (A), the x-axis shows the strength of scaled intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' total log abundance (y-axis). Values above $0$ indicate competition, and values less than $0$ indicate facilitation.  The two most abundant natives, \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) (purple triangles), do not compete with themselves any more or less strongly than the median for all species in the system (dashed line). \\
         (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' total log abundance (y-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green triangles identifies a species with low overall abundance but strong competitive effects on neighbours: \textit{Gilberta tenuifolia} (GITE). \\
-        (C) decomposes a focal species' net interaction strength into its competitive effects (x-axis) and facilitative effects (y-axis). Red triangles show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). The light grey diagonal shows where x = y, species above that line have an overall facilitative effect on other species whereas those below that line have an overall competitive effect. \textbf{Points capturing the effects of \textit{H. glabra} on neighbours are spread much further apart than for any other species, this is largely driven by it's high germination rate which magnifies interaction effects when those are scaled according to the population dynamics model as in the Supplementary Methods \ref{SI:popdyn}.}} 
+        (C) decomposes a focal species' net interaction strength into its competitive effects (x-axis) and facilitative effects (y-axis). Red triangles show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). The light grey diagonal shows where x = y, species above that line have an overall facilitative effect on other species whereas those below that line have an overall competitive effect. \textbf{Points capturing the effects of \textit{H. glabra} on neighbours are spread much further apart than for any other species, this is largely driven by it's high germination rate which magnifies interaction effects when those are scaled according to the population dynamics model (see Supplementary Methods \ref{SI:popdyn}).}} 
     \end{figure}
 
 \clearpage
