--- a/4.mss/tex/supps.tex
+++ b/4.mss/tex/supps.tex
@@ -10,11 +10,9 @@
     \label{SI:modelcode}
     
 
-    We make the several observations in addition to comments in the code. Firstly, identifiable interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. Our Github repository also contains the data\_prep.R file, which will show how to create these vectors from appropriate input data. 
-    \textit{Secondly, the code is written to use a negative binomial function (lines 96 and 98, and again 112 and 114) with an exponential inverse link (lines 64 and 77), the latter is equivalent to a log link function. These lines, along with the dispersion parameter (lines 31 and 86, and wherever the negative binomial function is used) must all be modified if a different family and link function are to be used.}
-    Thirdly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_i$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. We define the effect parameters as a unit vector, which means we only require K-1 degrees of freedom (where K is the total number of neighbour elements) to estimate all effect values. This loss of a degree of freedom arises from the fact that the matrix whose $i,j$-elements are all products $r_i \times e_j$ is of rank 1. The first response parameter is also forced to positive. This improves convergence by providing an anchor for all other parameter values to `rotate' around. Though these latter two have implications for our estimates of the latent variables $r_i$ and $e_j$, estimates for identifiable and unidentifiable interactions should not be affected.
-    % DBS: Above, I still bristle at the fact that we use K in the code and t in the main text for the number of neighbouring elements. Can we please change the code to match?
-    % MDB: The main issue is that 'T' reads as 'TRUE' in R
+    We make the several observations in addition to comments in the code. Firstly, identifiable interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the icol and irow vectors defined in the data block. Our Github repository also contains the data\_prep.R file, which will show how to create these vectors from appropriate input data. 
+    \textbf{Secondly, the code is written to use a negative binomial function (lines 96 and 98, and again 112 and 114) with an exponential inverse link (lines 64 and 77), the latter is equivalent to a log link function. These lines, along with the dispersion parameter (lines 31 and 86, and wherever the negative binomial function is used) must all be modified if a different family and link function are to be used.}
+    Thirdly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_i$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. \textbf{We define both the effect and the response parameters as unit vectors, which means we only require T-1 degrees of freedom (where T is the total number of neighbour elements) to estimate all effect values and S-1 degrees of freedom (where S is the total number of focal elements) to estimate all response values}. This loss of a degree of freedom arises from the fact that the matrix whose $i,j$-elements are all products $r_i \times e_j$ is of rank 1. Though both latent variables $r_i$ and $e_j$ may be susceptible to sign switching when running the model on multiple chains, estimates for identifiable and unidentifiable interactions should not be affected.
 
     \subsection{Assessing parameter identifiability}
     \label{SI:identify}
@@ -23,18 +21,36 @@
 
     In a similar way, we also evaluate whether predictors (neighbours) are linearly independent across the entire dataset in order to be able to correctly distinguish their respective effect parameters $e_j$ for the RIM. The same procedure as above is performed across the entire model matrix $X$ (without subsetting for each focal species) and neighbours in the entire matrix $Z$ are evaluated for linear independence. This is done early on in the master.R file (lines 26-36) as a check before transforming the data into the format required by STAN. Given enough data, a lack of linear independence across the entire dataset is very unlikely; indeed, it would only arise if multiple neighbours' densities were perfectly correlated across all neighbourhoods.
 
-    \subsection{Validation on multiple chains}
-    \label{SI:multichains}
+    \subsection{Evaluating model convergence for the case study data}
+    \label{SI:convergence}
 
 
-    \textbf{To further validate good chain behaviour and convergence of our model, we conducted an additional model run using three MCMC chains, each run for a total of 4000 iterations with the first 2000 discarded. We confirmed good chain mixing through the visual inspection of traceplots. All chains converged, as evidenced by the distribution of the split $\hat{R}$ statistic  which did not exceed $1.004$ over all parameters. The posterior distributions returned from multiple chains matched closely to those returned from running the model on a single chain, we thus present results from the single chain procedure in the main text. 
-    }
+    \textbf{The NDD-only model, the RI-only model and the joint model were all run on the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. The NDDM converged well with $\hat{R} < 1.01$ for all parameters. Convergence for the RIM was less ideal with few $\gamma$ and $B$ parameters reaching  $\hat{R}$ values below $1.01$, with a median $\hat{R}$ of $1.35$ for $\gamma_i$ and of $1.13$ for $B$. Convergence for the joint model was improved over the RIM, especially for the interaction parameters, with a median $\hat{R}$ of $1.23$ for $\gamma_i$ and of $1.005$ for $B$. This was achieved by setting \texttt{adapt\_delta = 0.99} and \texttt{maximum\_treedepth = 20}, we did not increase these values beyond as this was unlikely to resolve all convergence difficulties. In addition to the lack of other warnings and the good convergence of these models on simulated data, we believe that the lack of convergence observed here is due to a difficult geometry of the posteriors: both the $r$ and $e$ parameters are correlated within themselves due to their parameterisation as unit vectors (which is necessary to somewhat constrain these latent variables) as well as between $r_i$ and $e_j$ for observed neighbours of $i$. The degree to which this correlation is problematic for $\hat{R}$ will depend on the data at hand. If one value of $r_i$ gets shifted during sampling, this will shift all other $r$ values, which may impact $e_j$ and then in turn all other $e$ values, which can then also affect $\gamma_i$.} 
+
+    \textbf{This lack of convergence describes multi-modal posteriors for those parameters with higher $\hat{R}$, as different chains get stuck in slightly different local optima. Those local optima were, however, very close and overlapping in both parameter values and in the likelihood which is being maximised (Figure \ref{fig:parexample}). Indeed, the Monte Carlos standard error for all paramaters always remained lower than the posterior standard deviation, for both the RIM and joint model. This means that all parameters were estimated to a higher accuracy than their standard error, and further simulation will not modify posterior inferences by much. Furthermore, posterior intervals for these parameters were similar across all models and overlapping. Figure \ref{fig:gamma_all} shows the posterior intervals of all $\gamma$ parameters across all three models to illustrate this behaviour (showing this for the $B$ parameters would be unwieldy due to the high number of pairwise interactions in our case study). Comparison between all three model estimates was only possible because whilst the NDDM sets to $0$ all interactions where species were observed to co-occur but remained unindentifiable, those accounted for less than 5\% of all interactions in the dataset.}
+
 
     \begin{figure}[H]
-        \includegraphics[width=0.7\textwidth]{../../2.case_study/appendix_model_multichain/diag_rhat.png}
-        \caption{Distribution of the split $\hat{R}$ statistic from the model run on our case study data with three chains of 4000 iterations each, with the first 2000 discarded. The graph shows that $\hat{R}$ is centred on 1 and does not exceed $1.01$, indicating that chains have converged to the same underlying distribution. This figure was plotted using the stan\_rhat() function from the rstan package \parencite{Rstan2020}.}
-        \label{fig:adist}
+        \includegraphics[width=\textwidth]{../../2.case_study/mc_joint/adapt_delta_095_treedepth_20/gamma_21_joint.png}
+        \caption{Diagnostic plot for the least convergent $\gamma_i$ parameter ($\hat{R} = 4.73$) in the joint model. For all graphs, values for that $\gamma_i$ are given on the y-axis. The first graph shows a scatterplot of $\gamma_i$ against the accumulated log-posterior on the x-axis, whilst the second graph is a scatterplot of $\gamma_i$ against the average Metropolic acceptance rate. Each point corresponds to one sample. The bottom graph is a violin plot of the distribution of $\gamma_i$ at each of the sampled step sizes (one per chain). This figure illustrates that despite the chains not converging on the exact same values for $\gamma_i$, estimates are very close between chains and the associated log posteriors overlap. The figure was plotted using the \texttt{stan\_par()} function from the rstan package.}
+        \label{fig:parexample}
     \end{figure}
+
+    %\newpage
+    \newgeometry{top=0.5cm, bottom = .5cm}
+    \begin{figure}[H]
+        \includegraphics[width=\textwidth]{../../2.case_study/gamma_i_all_models.png}
+        \caption{Posterior interval distributions for all 22 $\gamma$ parameters as returned by the RIM, NDDM and joint model. For all graphs, posterior values are given on the x-axis. The red dot indicates the median of each distribution. The $\gamma_i$ with the highest $\hat{R}$ in the joint model is shown in the bottom-most right corner.}
+        \label{fig:gamma_all}
+    \end{figure}
+
+    \restoregeometry
+
+    % \addtocounter{figure}{-1}
+    % \begin{figure} [t!]
+    %     \caption{(Caption for previous page.)Posterior interval distributions for all 22 $\gamma$ parameters as returned by the RIM, NDDM and joint model. For all graphs, posterior values are given on the x-axis. The red dot indicates the median of each distribution. The $\gamma_i$ with the highest $\hat{R}$ in the joint model is shown in the bottom-most right corner.}
+    %     \label{fig:gamma_all}
+    % \end{figure}
 
     \subsection{Case study Methods}
     \label{SI:casestudy}
